# HAS-Qualifier-Challenges

./: README.md
antenna/: Makefile  README.md  antenna_control.py  challenge-Dockerfile  challenge.py  envfile  hacksat_servo.py  hacksat_servokit.py  orbit.py  randomize_challenge.py  solution_file.py  solver-Dockerfile  solver.py  worldcities_agg.csv
apollo/: Makefile  README.md  float-conv-agc.c
apollo/challenge/: Dockerfile  challenge.py  patch.sh
apollo/solver/: Dockerfile  solve.py
attitude/: Makefile  README.md  attitude.ipynb  attitude_xinetd.example
attitude/challenge/: Dockerfile  challenge.py  starGen.py  wrapper
attitude/generator/: generate.py
attitude/solver/: Dockerfile  solver.py  (+1 more)
basic-file/: Makefile  README.md
basic-handoff/: Makefile  README.md
basic-service/: Makefile  README.md
beckley/: Makefile  README.md  log
bus/: Makefile  README.md
centroids/: Makefile  README.md  centroid.ipynb
chagford/: Makefile  README.md
filter/: Makefile  README.md
generator-base/: Dockerfile  Makefile  README.md  upload.sh
goose/: LaunchDotCom Carnac 2.docx  Makefile  README.md
jackson/: Makefile  README.md
leaky/: Makefile  README.md
major_tom/: Makefile  README.md
mission/: Makefile  README.md
modem/: Makefile  README.md
monroe/: .dockerignore  Makefile  README.md
monroe/cfs/apps/f42/: CMakeLists.txt
monroe/cfs/apps/f42/fsw/src/: dcmkit.c  dcmkit.h  f42_app.c  fswkit.c  fswkit.h
myspace/: .gitignore  Makefile  README.md  stars.ipynb
nena/: Makefile  README.md
patch/: .dockerignore  Makefile  README.md
phasor/: Dockerfile  Makefile  README.md
phasor2/: Makefile  README.md
qemu-sparc/: Dockerfile  Makefile
rbs_m2/: .dockerignore  Makefile  README.md
rfmagic/: .Makefile.swp  Makefile  README.md
rogue/: Debug.ipynb  Makefile  README.md  Trilateration.ipynb  log
rtems/: Dockerfile  Makefile  README  leon3_custom.cfg
spacebook/: Makefile  README.md
spacedb/: .gitignore  .kubInfo  Makefile  README.md  log
spacerace/: Makefile  README.md
spacerace/challenge/: Cargo.toml  Dockerfile  comms-service.toml  epsApp.py  flagApp.py  local_config.toml  payloadApp.py  startup.sh
spacerace/challenge/src/: config.rs  flag.rs  housekeeping.rs  main.rs  payload.rs  spacepacket.rs  telemetry.rs
spacerace/kubos/: Cargo.toml
spacerace/kubos/services/db-test/: Cargo.toml
spacerace/kubos/services/sch-service/: Cargo.toml
spacerace/kubos/services/sch-service/src/: main.rs
spacerace/kubos/services/tel-service/: Cargo.toml  README.md
spacerace/kubos/services/tel-service/src/: main.rs
sparc1/: .dockerignore  Makefile  README.md
sparc2/: .dockerignore  Makefile  README.md
tweet/: Makefile  README.md
vaxthesat/: .dockerignore  Makefile  README.md
verizon/: Makefile  README.md
vmips-mips-emulator/: Dockerfile  Makefile
vmips-mips-emulator/src/: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  THANKS  accesstypes.h  acinclude.m4  aclocal.m4  clock.cc  clock.h  clockdev.cc  clockdev.h  clockreg.h  config.h  config.h.in  config.status  configure  configure.in  cpu.cc  cpu.h  cpzero.cc  cpzero.h  cpzeroreg.h  debug.cc  debug.h  deccsr.cc  deccsr.h  deccsrreg.h  decrtc.cc  decrtc.h  decrtcreg.h  decserial.cc  decserial.h  decserialreg.h  decstat.cc  (+61 more)
vmips-mips-emulator/src/debian/: changelog  control  copyright  dirs  docs  info  rules
vmips-mips-emulator/src/doc/: Makefile.am  Makefile.in  copyright.texi  invoke.texi  options.texi  vmips.1  vmips.info  vmips.texi  vmipstool.1  vmipstool.texi
vmips-mips-emulator/src/libopcodes_mips/: Makefile.am  Makefile.in  README  ansidecl.h  bfd.h  bfdlink.h  config.h  dis-asm.h  dis-buf.c  elf-bfd.h  libbfd-support.c  libbfd.h  mips-dis.c  mips-opc.c  mips16-opc.c  opintl.h  symcat.h  sysdep.h
vmips-mips-emulator/src/libopcodes_mips/.deps/: dis-buf.Po  libbfd-support.Po  mips-dis.Po  mips-opc.Po  mips16-opc.Po
vmips-mips-emulator/src/libopcodes_mips/elf/: common.h  external.h  internal.h  mips.h  reloc-macros.h
vmips-mips-emulator/src/libopcodes_mips/elf/CVS/: Entries  Repository  Tag
vmips-mips-emulator/src/libopcodes_mips/opcode/: mips.h
vmips-mips-emulator/src/libopcodes_mips/opcode/CVS/: Entries  Repository  Root
vmips-mips-emulator/src/sample_code/: Makefile.in  ld.script  setup.S
vmips-mips-emulator/src/sample_code/xmboot/: Makefile.in  README  boot.c  boot.script  boot_setup.S  bootenv.c  bootenv.h  catrom  coff.c  coff.h  lib.c  lib.h  libtest.c  libtest.input  libtest.output  loadtest.c  loadtest.script  loadtest_setup.S  panic.c  pftest.c  pftest.output  runtests  serial.c  serial.h  set_status.S  set_status.h  testbootenv.c  testbootenv.output  vmips16M  xmrcv.c  xmrcv.h
vmips-mips-emulator/src/test_code/: Makefile.am  Makefile.in  README
vmips-mips-emulator/src/test_code/config/: unix.exp
vmips-mips-emulator/src/test_code/lib/: vmips-misc.exp  vmips-outcheck.exp  vmips-regcheck.exp  vmips.exp
vmips-mips-emulator/src/test_code/vmips.misc-tests/: Makefile.am  Makefile.in  clocker.S  clocker.exp  clocker.par  echo  echo.c  echo.exp  echo.par  endian-test.S  endian-test.exp  endian-test.par  random.c  sort.c  sort.exp  sort.par  spimconsreg.h
vmips-mips-emulator/src/test_code/vmips.outcheck/: Makefile.am  Makefile.in  badargs.par  badoption.par  bdexcp.S  bdexcp.par  dzhello.c  dzhello.par  emptymain.c  emptymain.par  exception.S  exception.par  hello.c  hello.par  hello2.c  hello2.par  instcounts.S  instcounts.par  loser.S  loser.par  nonexistent.par  outcheck.exp  poke2.S  sb-print.S  sb-print.par  simpledis.S  simpledis.par  unaligned.S  unaligned.par
vmips-mips-emulator/src/test_code/vmips.regcheck/: Makefile.am  Makefile.in  add.S  add.par  addi.S  addi.par  bc0.S  bc0.par  bgezal.S  bgtz.S  bgtz.par  blez.S  blez.par  bltz.S  bltz.par  bltzal.S  bltzal.par  cisol.S  cisol.par  cload.S  cload.par  coproc.S  coproc.par  cstore.S  cstore.par  cstore2.S  cstore2.par  cswap.S  cswap.par  divu.S  divu.par  haltdev.S  haltdev.par  handler5.S  handler5.par  jalr.S  jalr.par  load.S  load.par  logical.S  (+34 more)
(+851 files in other folders)
