[profile.release]
lto = true
opt-level = "z"
panic = "abort"
codegen-units = 1

[package]
name = "space_race"
version = "0.1.0"

[dependencies]
serde = "*"
sys-info = "0.6.0"
byteorder = "1.3.4"
serde_json = "1.0"
toml = "*"
serde_derive = "*"
crc = "^1.0.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }