[workspace]
# This contains just pure Rust crates to allow for running
# cargo commands without C-build dependencies
default-members = [
"apis/app-api/rust",
"apps/obc-hs",
"apis/rust-radio-api",
"apis/system-api",
"apis/telemetry-db-api",
"clients/kubos-file-client",
"clients/kubos-shell-client",
"clients/uart-comms-client",
"kubos-build-helper",
"libs/cbor-protocol",
"libs/channel-protocol",
"libs/comms-service",
"libs/file-protocol",
"libs/shell-protocol",
"services/app-service",
"services/monitor-service",
"services/file-service",
"services/kubos-service",
"services/local-comms-service",
"services/sch-service",
"services/scheduler-service",
"services/shell-service",
"services/tel-service",
"services/telemetry-service",
"utils",
"services/db-test"
]

# This *must* contain all crates in this workspace
members=[
# Pure Rust crates
"apis/app-api/rust",
"apps/obc-hs",
"apis/rust-radio-api",
"apis/system-api",
"apis/telemetry-db-api",
"clients/kubos-file-client",
"clients/kubos-shell-client",
"clients/uart-comms-client",
"kubos-build-helper",
"libs/cbor-protocol",
"libs/channel-protocol",
"libs/comms-service",
"libs/file-protocol",
"libs/shell-protocol",
"services/app-service",
"services/monitor-service",
"services/file-service",
"services/kubos-service",
"services/local-comms-service",
"services/sch-service",
"services/scheduler-service",
"services/shell-service",
"services/tel-service",
"services/telemetry-service",
"utils",
"services/db-test",
]

exclude = []

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
codegen-units = 1

[profile.bench]
lto = true
opt-level = "z"
panic = "abort"
codegen-units = 1
