## Process this file with automake to produce Makefile.in.

noinst_LIBRARIES = libopcodes_mips.a
EXTRA_DIST = elf opcode
libopcodes_mips_a_SOURCES = \
	dis-buf.c libbfd-support.c mips-dis.c mips-opc.c mips16-opc.c \
	opintl.h sysdep.h config.h bfd.h elf-bfd.h libbfd.h ansidecl.h \
	bfdlink.h dis-asm.h symcat.h 
